<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Book Mobile</string>

    <!-- Label for overflow menu option that inserts book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_book_data">Insert Book Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for book type in the editor [CHAR LIMIT=30] -->
    <string name="category_book_type">Book Type</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Text hint for book name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Book Title</string>

    <!-- Text hint for supplier name [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier name [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Supplier Phone</string>

    <!-- Text hint for book quantity [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Quantity</string>

    <!-- Units for book quantity (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_book_quantity">copy/copies</string>

    <!-- Text hint for book name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>

    <!-- Text hint for book name field in the editor [CHAR LIMIT=30] -->
    <string name="price_currency">$</string>

    <!-- Label for dropdown menu option if the book is an audio [CHAR LIMIT=20] -->
    <string name="type_audio">Audio</string>

    <!-- Label for dropdown menu option if the book cover is hard [CHAR LIMIT=20] -->
    <string name="type_hardcover">Hardcover</string>

    <!-- Label for dropdown menu option if the book cover is paper [CHAR LIMIT=20] -->
    <string name="type_paperback">Paper Back</string>
</resources>
